<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ViewPrincipal" >

    <TextView
        android:id="@+id/tvTipoNotificacao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_marginTop="35dp"
        android:text="@string/tipoNotificacao"
        android:textSize="18sp"
        android:textStyle="bold|italic" />
    
    <TextView
        android:id="@+id/tvCabecalho"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_below="@+id/tvTipoNotificacao"
        android:text="@string/cabecalho"
        android:textSize="16sp"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/tvDataRecebimento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tvRemetente"
        android:layout_alignBottom="@+id/tvRemetente"
        android:layout_alignParentRight="true"
        android:layout_margin="5dp"
        android:layout_marginRight="20dp"
        android:text="@string/data"
        android:textSize="16sp"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/tvRemetente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvCabecalho"
        android:layout_alignParentBottom="true"
        android:layout_margin="5dp"
        android:layout_marginBottom="16dp"
        android:text="@string/remetente"
        android:textSize="16sp"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/tvMensagem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvCabecalho"
        android:layout_margin="5dp"
        android:layout_marginTop="82dp"
        android:text="@string/mensagem"
        android:textSize="16sp"
        android:autoLink="web"
        android:textStyle="bold|italic" />

</RelativeLayout>
