<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/verde"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ViewPrincipal" >
    
    <TextView
        android:id="@+id/tvBemVindo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="23dp"
        android:text="@string/bemVindo"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/btnConfig"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/tvBemVindo"
        android:layout_below="@+id/tvBemVindo"
        android:layout_marginTop="24dp"
        android:text="@string/configuracoes"
        android:textColor="@color/branco"
        android:textStyle="bold|italic" />

    <Button
        android:id="@+id/btnNotificacoes"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnConfig"
        android:layout_below="@+id/btnConfig"
        android:text="@string/notificacoes"
        android:textColor="@color/branco"
        android:textStyle="bold|italic" />

    <Button
        android:id="@+id/btnSair"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/logout"
        android:textColor="@color/branco"
        android:textStyle="bold|italic" />
    
</RelativeLayout>
